fix: footer on tablet resolution

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -73,7 +73,7 @@
           mix-blend-mode: normal;
         }
 
-        @media (max-width: 1080px) {
+        @media (max-width: 1130px) {
           height: 22px !important;
           width: auto;
         }
@@ -126,7 +126,7 @@
     }
   }
 
-  @media (max-width: 1080px) {
+  @media (max-width: 1130px) {
     .row {
       &:first-child {
         .logoWrapper {
