--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -16,7 +16,7 @@
   & :global(.container) {
     width: 100%;
   }
-  @media (max-width: 1180px) {
+  @media (max-width: 1280px) {
     background-size: 50% auto;
     background-position: right 20px center;
   }
